Java 18 -> 11: 1. Spring Boot 2. JPA